feat: fix some section and add license