@@ -13,75 +13,70 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 package com.alibaba.cloud.ai.service.dsl.nodes;
 
-import com.alibaba.cloud.ai.model.VariableSelector;
 import com.alibaba.cloud.ai.model.workflow.NodeType;
 import com.alibaba.cloud.ai.model.workflow.nodedata.AnswerNodeData;
 import com.alibaba.cloud.ai.service.dsl.AbstractNodeDataConverter;
 import com.alibaba.cloud.ai.service.dsl.DSLDialectType;
-import com.alibaba.cloud.ai.utils.StringTemplateUtil;
 import org.springframework.stereotype.Component;
 
-import java.util.*;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Component
 public class AnswerNodeDataConverter extends AbstractNodeDataConverter<AnswerNodeData> {
 
-	@Override
-	public Boolean supportNodeType(NodeType nodeType) {
-		return NodeType.ANSWER.equals(nodeType);
-	}
+    @Override
+    public Boolean supportNodeType(NodeType nodeType) {
+        return NodeType.ANSWER.equals(nodeType);
+    }
 
-	@Override
-	protected List<DialectConverter<AnswerNodeData>> getDialectConverters() {
-		return Stream.of(AnswerNodeDialectConverter.values())
-			.map(AnswerNodeDialectConverter::dialectConverter)
-			.toList();
-	}
+    @Override
+    protected List<DialectConverter<AnswerNodeData>> getDialectConverters() {
+        return Stream.of(Converter.DIFY, Converter.CUSTOM)
+                .map(Converter::dialectConverter)
+                .collect(Collectors.toList());
+    }
 
-	private enum AnswerNodeDialectConverter {
+    private enum Converter {
+        DIFY(new DialectConverter<>() {
+            @Override
+            public AnswerNodeData parse(Map<String, Object> data) {
+                AnswerNodeData nd = new AnswerNodeData();
+                nd.setAnswer((String) data.get("answer"));
+                return nd;
+            }
 
-		DIFY(new DialectConverter<>() {
-			@Override
-			public Boolean supportDialect(DSLDialectType dialectType) {
-				return DSLDialectType.DIFY.equals(dialectType);
-			}
+            @Override
+            public Map<String, Object> dump(AnswerNodeData nd) {
+                Map<String, Object> m = new LinkedHashMap<>();
+                if (nd.getAnswer() != null) {
+                    m.put("answer", nd.getAnswer());
+                }
+                return m;
+            }
 
-			@Override
-			public AnswerNodeData parse(Map<String, Object> data) {
-				String difyTmpl = (String) data.get("answer");
-				List<String> variables = new ArrayList<>();
-				String tmpl = StringTemplateUtil.fromDifyTmpl(difyTmpl, variables);
-				List<VariableSelector> inputs = variables.stream().map(variable -> {
-					String[] splits = variable.split("\\.", 2);
-					return new VariableSelector(splits[0], splits[1]);
-				}).toList();
-				return new AnswerNodeData(inputs, AnswerNodeData.DEFAULT_OUTPUTS).setAnswer(tmpl);
-			}
+            @Override
+            public Boolean supportDialect(DSLDialectType dialect) {
+                return DSLDialectType.DIFY.equals(dialect);
+            }
+        }),
 
-			@Override
-			public Map<String, Object> dump(AnswerNodeData nodeData) {
-				Map<String, Object> data = new HashMap<>();
-				String difyTmpl = StringTemplateUtil.toDifyTmpl(nodeData.getAnswer());
-				data.put("answer", difyTmpl);
-				return data;
-			}
-		}),
+        CUSTOM(defaultCustomDialectConverter(AnswerNodeData.class));
 
-		CUSTOM(AbstractNodeDataConverter.defaultCustomDialectConverter(AnswerNodeData.class));
+        private final DialectConverter<AnswerNodeData> converter;
 
-		private final DialectConverter<AnswerNodeData> dialectConverter;
+        Converter(DialectConverter<AnswerNodeData> converter) {
+            this.converter = converter;
+        }
 
-		public DialectConverter<AnswerNodeData> dialectConverter() {
-			return dialectConverter;
-		}
-
-		AnswerNodeDialectConverter(DialectConverter<AnswerNodeData> dialectConverter) {
-			this.dialectConverter = dialectConverter;
-		}
-
-	}
-
+        public DialectConverter<AnswerNodeData> dialectConverter() {
+            return converter;
+        }
+    }
 }
